@@ -1,3 +1,10 @@
+2002-09-10  Michael Thome  <mthome@bbn.com>
+
+	* org/cougaar/core/util/CheckJarsServlet.java
+	A utility servlet which simply reports on the set of jars used by
+	the queried agent, including cougaar build information when
+	available.
+
 2002-07-24  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* org/cougaar/core/blackboard/Distributor.java:
